ingress/ingress-tls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: fanout-ingress
  annotations:
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: hello-server-ip
  labels:
    app: hello
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: hello-server
          servicePort: 8080
  tls:
  - hosts:
    - hello.pytools.org
    secretName: pytools-org-tls

# gcloud compute addresses create hello-server-ip --global
# kubectl get ingress -o=yaml fanout-ingress
