ingress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: fanout-ingress
  annotations:
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.global-static-ip-name: hello-server-ip
  labels:
    app: hello
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: hello-server
          servicePort: 8080
